--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "15.6.0",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-addons-update": "15.6.2",
+    "react-dom": "^16.1.1",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "semantic-ui-css": "2.2.12",
+    "semantic-ui-react": "0.77.0",
+    "styled-components": "2.2.3",
+    "superagent": "3.8.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
