--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "lodash": "4.17.4",
     "prop-types": "15.6.0",
-    "react": "^16.1.1",
+    "react": "16.2.0",
+    "react-addons-create-fragment": "15.6.2",
     "react-addons-update": "15.6.2",
     "react-dom": "^16.1.1",
     "react-redux": "5.0.6",
